# chromewright

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md  perf.md
scripts/: package-release.ps1  package-release.sh
specs/: _handoff.md  index.md
specs/agent-document-surface-hardening/: design.md  requirements.md  tasks.md
specs/contract-domain-extraction/: design.md  requirements.md  tasks.md
specs/dependency-modernization-and-architecture/: design.md  requirements.md  tasks.md
specs/headless-chrome-cdp-contract-pin/: design.md  requirements.md  tasks.md
specs/mcp-blocking-execution-boundary/: design.md  requirements.md  tasks.md
specs/mcp-structured-target-contract/: tasks.md
specs/performance-and-surface-hardening/: design.md  requirements.md  tasks.md
specs/set-viewport-schema-constraints/: design.md  requirements.md  tasks.md
specs/snapshot-projector-extraction/: design.md  requirements.md  tasks.md
specs/typed-browser-command-layer/: design.md  requirements.md  tasks.md
specs/typed-browser-error-taxonomy/: design.md  requirements.md  tasks.md
specs/viewport-metrics-backend-api/: design.md  tasks.md
specs/viewport-output-contract-alignment/: design.md  requirements.md  tasks.md
src/: error.rs  lib.rs
src/browser/: backend.rs  commands.rs  config.rs  mod.rs  session.rs
src/contract/: document.rs  mod.rs  target.rs  tool_result.rs  viewport.rs
src/dom/: document_metadata.js  element.rs  extract_dom.js  mod.rs  tree.rs
src/mcp/: handler.rs  mod.rs
tests/: browser_smoke.rs  browser_tools_integration.rs  dom_integration.rs  markdown_integration.rs  navigation_integration.rs  tab_management_integration.rs
(+49 files in other folders)
