[package]
name = "chromewright"
version = "0.2.3"
edition = "2024"
authors = ["Bruno Meilick"]
description = "Browser automation MCP server and Rust library via Chrome DevTools Protocol (CDP)"
readme = "README.md"
homepage = "https://github.com/bnomei/chromewright"
documentation = "https://docs.rs/chromewright"
license = "MIT"
repository = "https://github.com/bnomei/chromewright"
keywords = ["browser", "automation", "cdp", "mcp", "cli"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
rust-version = "1.85"
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/docs/**",
    "/src/**",
    "/tests/**",
]

[[bin]]
name = "chromewright"
path = "src/bin/mcp_server.rs"
required-features = ["mcp-server"]

[features]
default = ["mcp-server"]
mcp-handler = ["rmcp/macros", "rmcp/server"]
mcp-server = [
    "mcp-handler",
    "rmcp/transport-io",
    "rmcp/transport-streamable-http-server",
    "tokio",
    "clap",
    "axum",
    "env_logger",
]

[dependencies]
headless_chrome = "1.0.18"
rmcp = "1.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
schemars = "1.1"
async-trait = "0.1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "signal",
], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
axum = { version = "0.8", optional = true }
log = "0.4"
env_logger = { version = "0.11", optional = true }
html2md = "0.2"

[dev-dependencies]
urlencoding = "2.1"
